[package]
name = "nvptx-sys"
version = "0.2.1"
authors = ["Julia Tatz <tatz.j@northeastern.edu>"]
edition = "2018"

[dependencies]
libm = "0.2"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
derive_more = "0.99"
nvptx-vprintf = { path = "nvptx-vprintf" }

[features]
default = []
panic = []
alloc = []
noisy-panics = ["panic"]

[workspace]
members = ["nvptx-vprintf"]
