[package]
name = "nvptx-sys"
version = "0.3.1"
authors = ["Julia Tatz <tatz.j@northeastern.edu>"]
edition = "2021"

[dependencies]
libm = "0.2"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
float_eq = { version = "1.0", default-features = false }
derive_more = "0.99"
nvptx-vprintf = { path = "nvptx-vprintf" }

[features]
default = []
panic = []
noisy-panics = ["panic"]
global-allocator = []
unstable-allocator-api = []
i128 = ["num-traits/i128"]

[workspace]
members = ["nvptx-vprintf"]
